--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
 
     <header>
       <div class="container">
-        <h1>Prism of Everything</h1>
+        <h1><a href="https://github.com/prismofeverything">Prism of Everything</a></h1>
         <h2>What is left over when you remove the parts from the sum?</h2>
 
-        <section id="downloads">
-          <a href="https://github.com/prismofeverything" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
       </div>
     </header>
 
