--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1><a href="https://github.com/prismofeverything">Prism of Everything</a></h1>
+        <h1>Prism of Everything</h1>
         <h2>What is left over when you remove the parts from the sum?</h2>
 
       </div>
@@ -24,7 +24,8 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a name="prism-of-everything" class="anchor" href="#prism-of-everything"><span class="octicon octicon-link"></span></a>Prism of Everything</h3>
+
+<a name="prism-of-everything" class="anchor" href="#prism-of-everything"><span class="octicon octicon-link"></span></a><a href="https://github.com/prismofeverything">Prism of Everything</a></h3>
 
 <p>The original mythos of the Prism of Everything stems from the construction of a wooden puzzle where all the pieces are identical, but when oriented in the right way it creates a bound object with its own character, identity and inner tensegrity.  What is present in the whole that is not present in the parts alone?  It is not energy, or mass, or anything traditionally measurable.  Rather, it is the organization of the parts into a whole that imbues it with its unique signature of life.  </p>
 
